<resources>
    <string name="app_name">B9000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_upload_post">Upload Post</string>
    <string name="nav_movies_and_tv"><![CDATA[Movies & TV]]></string>
    <string name="nav_education_memes">Education Memes</string>
    <string name="nav_dank_memes">Dank Memes</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All As Read</string>
    <string name="action_logout">Logout</string>
    <string name="categories">Categories</string>

</resources>
